--- a/08-crud-pessoas/package.json
+++ b/08-crud-pessoas/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "yup": "^1.7.1"
   }
 }
